[gd_scene load_steps=5 format=3 uid="uid://c5io863yqwynd"]

[ext_resource type="Script" path="res://Player3D/Hook.gd" id="1_pc0vx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ldilg"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nvakc"]
albedo_color = Color(1, 0.0901961, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_w62ud"]
material = SubResource("StandardMaterial3D_nvakc")
size = Vector3(0.05, 0.05, 50)

[node name="Hook" type="Node3D"]
script = ExtResource("1_pc0vx")

[node name="HookMesh" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="HookMesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_ldilg")

[node name="Line" type="MeshInstance3D" parent="HookMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25)
visible = false
mesh = SubResource("BoxMesh_w62ud")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -200, 0)

[node name="GrappleTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Lookpoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16.0848)

[connection signal="timeout" from="GrappleTimer" to="." method="_on_grapple_timer_timeout"]
